# laughing-likert-v2

./: Dockerfile  Requirements.R  app.py  auth.py  likert_analysis.R  likert_hybrid.py  likert_pattern_analysis.py  pyproject.toml  r-cran.gpg  requirements.txt  utils.py
tabs/: __init__.py  data_preparation.py  item_analysis.py  pattern_extraction.py  reports.py  simulation.py
tabs/simulation/: __init__.py  bias_config.py  data_generator.py  simulation_tab.py  statistical_analysis.py  utils.py  visualization.py
templates/: py_report_template.html  report_template.html
