[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "factor-analyzer>=0.5.1",
    "jinja2>=3.1.6",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "semopy>=2.3.11",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.0",
]
